# s3-resize-func

./: Makefile  README.md  pyproject.toml  template.yaml
s3img/: app.py  imgtool.py  uploader.py
tests/integration/: conftest.py  test_resize.py  test_upload.py
tests/unit/: test_handler.py
